# ModulesExperiments

./: .gitignore  AbstractBowl.cpp  AbstractBowl.cppm  AbstractBowl.h  AbstractFruit.cpp  AbstractFruit.cppm  AbstractFruit.h  Apple.cpp  Apple.cppm  Apple.h  Bowls.cppm  CMakeLists.txt  FruitBowl.cpp  FruitBowl.cppm  FruitBowl.h  FruitSalad.cppm  Grape.cpp  Grape.cppm  Grape.h  NotFruitSalad.cppm  SaladBowl.cpp  SaladBowl.cppm  SaladBowl.h  Tomato.cpp  Tomato.cppm  Tomato.h  abstractfruit_export.h  bowls_export.h  build.sh  dinnerparty.cpp  fruitsalad_export.h  notfruitsalad_export.h
